--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
   </header>
 
   <main class="hero">
-    <h1 class="hello">HELLO!!!!</h1>
+    <div class="content">
+      <h1 class="hello">HELLO!!!!</h1>
+      <div id="countdown" class="countdown"></div>
+    </div>
   </main>
 
-  <!-- Confetti library -->
+  <!-- Confetti library (still active!) -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </body>
