--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     #title {
       font-size: 40px; /* smaller than countdown */
       margin-bottom: 20px;
-      color: #93C9A7; /* softer mint green */
+      color: #77BDA2; /* title color */
     }
 
     #countdown {
       font-size: 80px;
-      color: #77BDA2; /* main countdown mint */
+      color: #93C9A7; /* countdown color */
     }
   </style>
 </head>
