--- a/index.html
+++ b/index.html
@@ -1,6 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><head>
+  <meta charset="UTF-8">
+  <title>The Life of a Showgirl Countdown</title>
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-family: 'Alfa Slab One', cursive;
+      background: url('https://www.transparenttextures.com/patterns/gold-scale.png'), #F87540;
+      background-size: cover;
+      color: #77BDA2;
+    }
+    h1 {
+      margin-top: 30px;
+      font-size: 34px;
+      color: #77BDA2;
+      text-align: center;
+      font-family: 'Alfa Slab One', cursive;
+    }
+    #countdown {
+      font-size: 60px;
+      font-weight: bold;
+      color: #93C9A7;
+      margin: 20px 0 40px 0;
+      text-align: center;
+      font-family: 'Alfa Slab One', cursive;
+    }
+    .game-section {
+      width: 85%;
+      max-width: 850px;
+      background: rgba(255,255,255,0.1);
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 30px;
+      font-family: 'Alfa Slab One', cursive;
+    }
+    .question {
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+    .options button {
+      display: block;
+      margin: 6px 0;
+      padding: 10px;
+      width: 100%;
+      border: none;
+      border-radius: 5px;
+      background: #77BDA2;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      font-family: 'Alfa Slab One', cursive;
+    }
+    .options button:hover {
+      background: #93C9A7;
+    }
+    input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: none;
+      margin-bottom: 10px;
+      font-family: 'Alfa Slab One', cursive;
+    }
+    .feedback {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+  </style>
+</head>
   <meta charset="UTF-8">
   <title>The Life of a Showgirl Countdown</title>
   <style>
