--- a/index.html
+++ b/index.html
@@ -3,23 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Harper’s 3D Creations</title>
+  <title>The Rock-O-Bots</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
-    <h1>Harper’s 3D Creations</h1>
-    <p>Showcasing student-made 3D projects!</p>
+    <h1>The Rock-O-Bots</h1>
+    <p>Blocko • Pixel • Gizmo</p>
+    <h2 class="album-title">New Album Out Now: <span>Decoding Bugs</span></h2>
   </header>
 
-  <main>
-    <section id="gallery">
-<img src="project.jpg"  />
-    </section>
-  </main>
+  <section id="album-cover">
+    <img src="project.jpg" alt="The Rock-O-Bots album promo" />
+  </section>
+
+  <section id="about">
+    <h2>Meet the Band</h2>
+    <p><strong>Blocko</strong> — Lead vocalist with a dramatic robot stare.</p>
+    <p><strong>Pixel</strong> — Synth wizard and button-masher extraordinaire.</p>
+    <p><strong>Gizmo</strong> — Rhythm unit who hits things until they make musical noises.</p>
+  </section>
+
+  <section id="tracks">
+    <h2>Tracklist: <em>Decoding Bugs</em></h2>
+    <ul>
+      <li>01 — Error 404 (Found My Heart)</li>
+      <li>02 — Binary Beatdown</li>
+      <li>03 — Sparks Fly (Literally)</li>
+      <li>04 — Hardware Heartache</li>
+      <li>05 — Debugging My Feelings</li>
+      <li>06 — Circuit Breaker Breakup</li>
+      <li>07 — Reboot Romance</li>
+      <li>08 — Power Surge Party</li>
+      <li>09 — The Glitch in Me</li>
+      <li>10 — Rock-O-Bots Anthem</li>
+    </ul>
+  </section>
+
+  <section id="tour">
+    <h2>Upcoming Tour Dates</h2>
+    <p>Tokyo, Japan — December 12, 2025</p>
+    <p>Seoul, South Korea — December 19, 2025</p>
+    <p>Los Angeles, USA — January 10, 2026</p>
+    <p>New York City, USA — January 18, 2026</p>
+  </section>
 
   <footer>
-    <p>© 2025 Harper O.</p>
+    <p>© 2025 The Rock-O-Bots • Powered by Pure Robot Energy ⚡</p>
   </footer>
+
 </body>
 </html>
