--- a/stream.html
+++ b/stream.html
@@ -33,7 +33,7 @@
             border-radius: 8px;
             margin-top: 30px;
         }
-        .fake-player {
+        .track {
             background: #e0f7f3;
             padding: 20px;
             margin: 20px 0;
@@ -57,30 +57,17 @@
     <div class="stream-container">
         <h2>Listen to the Full Album</h2>
 
-        <div class="fake-player">
-            <h3>Track 1 — Byte Me</h3>
-            <p>[Fake audio player]</p>
-        </div>
+        <div class="track"><h3>Track 1 — Byte Me</h3></div>
+        <div class="track"><h3>Track 2 — Debugging My Heart</h3></div>
+        <div class="track"><h3>Track 3 — Glitch in the System</h3></div>
+        <div class="track"><h3>Track 4 — Binary Dreams</h3></div>
+        <div class="track"><h3>Track 5 — Crash and Burn</h3></div>
+        <div class="track"><h3>Track 6 — Malware Melody</h3></div>
+        <div class="track"><h3>Track 7 — Short Circuit Serenade</h3></div>
+        <div class="track"><h3>Track 8 — Firewall</h3></div>
+        <div class="track"><h3>Track 9 — Reboot My Soul</h3></div>
+        <div class="track"><h3>Track 10 — Ending.exe</h3></div>
 
-        <div class="fake-player">
-            <h3>Track 2 — Debugging My Heart</h3>
-            <p>[Fake audio player]</p>
-        </div>
-
-        <div class="fake-player">
-            <h3>Track 3 — Glitch in the System</h3>
-            <p>[Fake audio player]</p>
-        </div>
-
-        <div class="fake-player">
-            <h3>Track 4 — Binary Dreams</h3>
-            <p>[Fake audio player]</p>
-        </div>
-
-        <div class="fake-player">
-            <h3>Track 5 — Crash and Burn</h3>
-            <p>[Fake audio player]</p>
-        </div>
     </div>
 </body>
 </html>
