--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         <a href="index.html">Home</a>
         <a href="stream.html">Stream</a>
         <a href="tour2026.html">World Tour 2026</a>
-        <a href="merch.html">Merch</a>
     </nav>
 
     <div class="content">
@@ -61,23 +60,18 @@
 
         <div class="band-box">
             <div class="member">
-                <h3>Rex-404 — Lead Vocals</h3>
-                <p>Known for glitchy high notes and robotic charm.</p>
+                <h3>Pixel — Lead Vocals</h3>
+                <p>Hits every high note with glitch-perfect precision.</p>
             </div>
 
             <div class="member">
-                <h3>Sparky Unit-7 — Guitar</h3>
-                <p>Shreds solos at 3,000 calculations per second.</p>
+                <h3>Gizmo — Guitarist</h3>
+                <p>Known for high-voltage solos and shredding at light speed.</p>
             </div>
 
             <div class="member">
-                <h3>ByteBeats — Drums</h3>
-                <p>Powered by percussion algorithms and energy drinks.</p>
-            </div>
-
-            <div class="member">
-                <h3>DataWave — Synth + Keys</h3>
-                <p>Creates the signature Rock-O-Bots cyber-pop soundscape.</p>
+                <h3>Blocko — Drums</h3>
+                <p>Powerful, blocky rhythms that shake the motherboard.</p>
             </div>
         </div>
     </div>
