--- a/tour2026.html
+++ b/tour2026.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Stream — Decoding Bugs</title>
+    <title>Rock-O-Bots World Tour 2026</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -25,49 +25,47 @@
             text-decoration: none;
             font-weight: bold;
         }
-        .stream-container {
-            width: 70%;
+        .tour-cities {
+            width: 60%;
             margin: auto;
             background: white;
             padding: 30px;
             border-radius: 8px;
             margin-top: 30px;
         }
-        .track {
-            background: #e0f7f3;
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 6px;
-        }
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Stream: Decoding Bugs</h1>
+        <h1>World Tour 2026</h1>
     </header>
 
     <nav>
         <a href="index.html">Home</a>
         <a href="stream.html">Stream</a>
         <a href="tour2026.html">World Tour 2026</a>
-        <a href="merch.html">Merch</a>
     </nav>
 
-    <div class="stream-container">
-        <h2>Listen to the Full Album</h2>
+    <div class="tour-cities">
+        <h2>Tour Stops</h2>
 
-        <div class="track"><h3>Track 1 — Byte Me</h3></div>
-        <div class="track"><h3>Track 2 — Debugging My Heart</h3></div>
-        <div class="track"><h3>Track 3 — Glitch in the System</h3></div>
-        <div class="track"><h3>Track 4 — Binary Dreams</h3></div>
-        <div class="track"><h3>Track 5 — Crash and Burn</h3></div>
-        <div class="track"><h3>Track 6 — Malware Melody</h3></div>
-        <div class="track"><h3>Track 7 — Short Circuit Serenade</h3></div>
-        <div class="track"><h3>Track 8 — Firewall</h3></div>
-        <div class="track"><h3>Track 9 — Reboot My Soul</h3></div>
-        <div class="track"><h3>Track 10 — Ending.exe</h3></div>
-
+        <p>• Tokyo, Japan — Jan 12</p>
+        <p>• Seoul, South Korea — Jan 16</p>
+        <p>• Sydney, Australia — Jan 28</p>
+        <p>• Auckland, New Zealand — Feb 2</p>
+        <p>• London, UK — Feb 10</p>
+        <p>• Paris, France — Feb 14</p>
+        <p>• Berlin, Germany — Feb 18</p>
+        <p>• Toronto, Canada — Mar 3</p>
+        <p>• <strong>Boston, MA — Mar 10</strong></p>
+        <p>• New York City, NY — Mar 14</p>
+        <p>• Chicago, IL — Mar 20</p>
+        <p>• Mexico City, Mexico — Mar 25</p>
+        <p>• São Paulo, Brazil — Apr 5</p>
+        <p>• Buenos Aires, Argentina — Apr 9</p>
+        <p>• Los Angeles, CA — Apr 18</p>
+        <p>• Honolulu, HI — Apr 28</p>
     </div>
 </body>
 </html>
