--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 <section id="home" class="section">
     <h2>Meet the Band</h2>
     <div class="band-member"><strong>Pixel</strong> — Lead Vocals</div>
-    <div class="band-member"><strong>Gizmo</strong> — Guitarist</div>
-    <div class="band-member"><strong>Blocko</strong> — Drums</div>
+    <div class="band-member"><strong>Blocko</strong> — Guitar</div>
 
     <h2 style="margin-top: 60px;">New Album: <em>Decoding Bugs</em></h2>
     <ul class="tracklist">
