--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rock-O-Bots | Decoding Bugs</title>
+    <title>Rock-O-Bots | Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         body {
@@ -13,58 +13,25 @@
             text-align: center;
             color: white;
         }
-
         header {
             padding: 60px 0 20px;
             font-size: 3rem;
             font-weight: 800;
             text-shadow: 0 0 15px rgba(0,0,0,0.4);
         }
-
-        nav {
-            margin-bottom: 40px;
-        }
-
         nav a {
             color: white;
-            text-decoration: none;
             margin: 0 20px;
+            text-decoration: none;
             font-size: 1.2rem;
             font-weight: 600;
         }
-
-        nav a:hover {
-            text-shadow: 0 0 8px rgba(255,255,255,0.8);
-        }
-
-        .section {
-            padding: 80px 20px;
-        }
-
-        h2 {
-            font-size: 2.4rem;
-            margin-bottom: 20px;
-            text-shadow: 0 0 8px rgba(0,0,0,0.3);
-        }
-
-        .band-member {
-            font-size: 1.5rem;
-            margin: 12px 0;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-            font-size: 1.3rem;
-        }
-
-        li {
-            margin: 10px 0;
-        }
-
-        .tracklist li {
-            font-size: 1.2rem;
-        }
+        nav a:hover { text-shadow: 0 0 8px rgba(255,255,255,0.8); }
+        .section { padding: 80px 20px; }
+        .band-member { font-size: 1.5rem; margin: 12px 0; }
+        ul { list-style: none; padding: 0; font-size: 1.3rem; }
+        li { margin: 10px 0; }
+        .tracklist li { font-size: 1.2rem; }
     </style>
 </head>
 <body>
@@ -72,35 +39,27 @@
 <header>Rock-O-Bots</header>
 
 <nav>
-    <a href="#home">Home</a>
-    <a href="#stream">Stream Album</a>
-    <a href="#tour">2026 World Tour</a>
+    <a href="index.html">Home</a>
+    <a href="stream.html">Stream Album</a>
+    <a href="tour.html">2026 World Tour</a>
 </nav>
 
-<!-- HOME -->
-<section id="home" class="section">
+<section class="section" id="home">
     <h2>Meet the Band</h2>
     <div class="band-member"><strong>Pixel</strong> — Lead Vocals</div>
     <div class="band-member"><strong>Blocko</strong> — Guitar</div>
 
-    
-
-<!-- TOUR PAGE -->
-<section id="tour" class="section">
-    <h2>2026 World Tour</h2>
-    <ul>
-        <li>Tokyo, Japan — Jan 12</li>
-        <li>Seoul, South Korea — Jan 18</li>
-        <li>Sydney, Australia — Feb 2</li>
-        <li>Los Angeles, CA — Mar 10</li>
-        <li>Chicago, IL — Mar 17</li>
-        <li>Boston, MA — Mar 22</li>
-        <li>Toronto, Canada — Apr 4</li>
-        <li>Berlin, Germany — Apr 18</li>
-        <li>Paris, France — Apr 24</li>
-        <li>London, UK — May 1</li>
-        <li>São Paulo, Brazil — Jun 10</li>
-        <li>Mexico City, Mexico — Jun 17</li>
+    <h2 style="margin-top: 60px;">New Album: <em>Decoding Bugs</em></h2>
+    <ul class="tracklist">
+        <li>1. System Startup</li>
+        <li>2. Neon Wires</li>
+        <li>3. Binary Heartbeat</li>
+        <li>4. Glitch in the Sky</li>
+        <li>5. Circuits on Fire</li>
+        <li>6. Memory Lane.exe</li>
+        <li>7. Debugging Love</li>
+        <li>8. Electric Dreams</li>
+        <li>9. Shutdown Sequence</li>
     </ul>
 </section>
 
