--- a/stream.html
+++ b/stream.html
@@ -1,72 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Stream — Decoding Bugs</title>
+    <meta charset="UTF-8">
+    <title>Rock-O-Bots | Stream the Album</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #7fffd4;
             margin: 0;
+            font-family: 'Orbitron', sans-serif;
+            background: linear-gradient(180deg, #ff8a3d, #ff5ca7);
+            background-attachment: fixed;
+            text-align: center;
+            color: white;
         }
         header {
-            background-color: #009b8e;
-            padding: 20px;
-            text-align: center;
-            color: white;
-        }
-        nav {
-            background-color: #00b7a3;
-            padding: 10px;
-            text-align: center;
+            padding: 60px 0 20px;
+            font-size: 3rem;
+            font-weight: 800;
+            text-shadow: 0 0 15px rgba(0,0,0,0.4);
         }
         nav a {
-            margin: 0 15px;
             color: white;
+            margin: 0 20px;
             text-decoration: none;
-            font-weight: bold;
+            font-size: 1.2rem;
+            font-weight: 600;
         }
-        .stream-container {
-            width: 70%;
-            margin: auto;
-            background: white;
-            padding: 30px;
-            border-radius: 8px;
-            margin-top: 30px;
-        }
-        .track {
-            background: #e0f7f3;
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 6px;
-        }
+        nav a:hover { text-shadow: 0 0 8px rgba(255,255,255,0.8); }
+        .section { padding: 80px 20px; }
+        ul { list-style: none; padding: 0; font-size: 1.3rem; }
+        li { margin: 10px 0; }
     </style>
 </head>
-
 <body>
-    <header>
-        <h1>Stream: Decoding Bugs</h1>
-    </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="stream.html">Stream</a>
-        <a href="tour2026.html">World Tour 2026</a>
-    </nav>
+<header>Rock-O-Bots</header>
 
-    <div class="stream-container">
-        <h2>Listen to the Full Album</h2>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="stream.html">Stream Album</a>
+    <a href="tour.html">2026 World Tour</a>
+</nav>
 
-        <div class="track"><h3>Track 1 — Byte Me</h3></div>
-        <div class="track"><h3>Track 2 — Debugging My Heart</h3></div>
-        <div class="track"><h3>Track 3 — Glitch in the System</h3></div>
-        <div class="track"><h3>Track 4 — Binary Dreams</h3></div>
-        <div class="track"><h3>Track 5 — Crash and Burn</h3></div>
-        <div class="track"><h3>Track 6 — Malware Melody</h3></div>
-        <div class="track"><h3>Track 7 — Short Circuit Serenade</h3></div>
-        <div class="track"><h3>Track 8 — Firewall</h3></div>
-        <div class="track"><h3>Track 9 — Reboot My Soul</h3></div>
-        <div class="track"><h3>Track 10 — Ending.exe</h3></div>
+<section class="section" id="stream">
+    <h2>Stream <em>Decoding Bugs</em></h2>
+    <p>Available on all major platforms:</p>
+    <ul>
+        <li>Spotify</li>
+        <li>Apple Music</li>
+        <li>YouTube Music</li>
+        <li>Amazon Music</li>
+        <li>SoundCloud</li>
+    </ul>
+</section>
 
-    </div>
 </body>
 </html>
