--- a/index.html
+++ b/index.html
@@ -4,47 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-O-Bots • Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: "Orbitron", serif;
-            background: linear-gradient(to bottom, #ff9fd8, #b48bff);
+            font-family: 'Orbitron', sans-serif;
             color: white;
+            background: linear-gradient(to bottom, #ff9933, #ff66b3);
             text-align: center;
         }
-        header {
-            padding: 40px 20px;
+        nav {
+            padding: 25px;
+            font-size: 20px;
         }
         nav a {
-            margin: 0 15px;
-            text-decoration: none;
             color: white;
-            font-weight: bold;
-            font-size: 18px;
+            margin: 0 18px;
+            text-decoration: none;
+            font-weight: 700;
         }
         .content {
-            max-width: 600px;
+            max-width: 800px;
             margin: 80px auto;
-            font-size: 20px;
-            line-height: 1.7;
+            padding: 20px;
+            font-size: 22px;
+            line-height: 1.8;
+        }
+        h1 {
+            font-size: 48px;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="stream.html">Stream</a>
-        <a href="about.html">About</a>
-    </nav>
-</header>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="stream.html">Stream</a>
+    <a href="tour.html">Tour</a>
+</nav>
 
 <div class="content">
-    <h1>About the Album</h1>
+    <h1>Rock-O-Bots</h1>
     <p>
-        “Melancholy” explores quiet emotion, soft color, and introspection through sound.
-        Each track is crafted to feel like a moment suspended in time.
+        The Rock-O-Bots are a factory-based band consisting of Blocko, the guitarist, 
+        and Pixel, the lead singer. Their world tour for their new album, 
+        <em>Decoding Bugs</em>, begins in January of 2026, with stops from Korea to Hawaii.
+    </p>
+    <p>
+        Their music blends robotic precision with glitchy creativity, 
+        turning machine noise into melody and emotion. 
+        “Decoding Bugs” is their first full-length album, 
+        exploring themes of circuitry, error, and electric dreams.
     </p>
 </div>
 
