--- a/stream.html
+++ b/stream.html
@@ -3,47 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melancholy Music</title>
+    <title>Rock-O-Bots • Stream</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: "Georgia", serif;
-            background: linear-gradient(to bottom, #ff9fd8, #b48bff);
+            font-family: 'Orbitron', sans-serif;
             color: white;
+            background: linear-gradient(to bottom, #ff9933, #ff66b3);
             text-align: center;
         }
-        header {
-            padding: 40px 20px;
+        nav {
+            padding: 25px;
+            font-size: 20px;
         }
         nav a {
-            margin: 0 15px;
-            text-decoration: none;
             color: white;
-            font-weight: bold;
-            font-size: 18px;
+            margin: 0 18px;
+            text-decoration: none;
+            font-weight: 700;
         }
-        .main-title {
-            margin-top: 120px;
-            font-size: 60px;
+        .content {
+            max-width: 800px;
+            margin: 60px auto;
+            padding: 20px;
+            font-size: 22px;
+            line-height: 1.9;
         }
-        .subtitle {
-            font-size: 24px;
-            margin-bottom: 80px;
+        h1 {
+            font-size: 45px;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            font-size: 20px;
+        }
+        li {
+            margin: 8px 0;
+        }
+        .links a {
+            display: block;
+            margin: 12px 0;
+            color: white;
+            text-decoration: underline;
+            font-size: 22px;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="stream.html">Stream</a>
-        <a href="about.html">About</a>
-    </nav>
-</header>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="stream.html">Stream</a>
+    <a href="tour.html">Tour</a>
+</nav>
 
-<h1 class="main-title">Melancholy</h1>
-<p class="subtitle">A journey into the softer side of sound.</p>
+<div class="content">
+    <h1>Stream • Decoding Bugs</h1>
+
+    <h2>Tracklist</h2>
+    <ul>
+        <li>1. System Startup</li>
+        <li>2. Neon Wires</li>
+        <li>3. Binary Heartbeat</li>
+        <li>4. Glitch in the Sky</li>
+        <li>5. Circuits on Fire</li>
+        <li>6. Memory Lane.exe</li>
+        <li>7. Debugging Love</li>
+        <li>8. Electric Dreams</li>
+        <li>9. Shutdown Sequence</li>
+    </ul>
+
+    <h2 style="margin-top: 40px;">Listen on:</h2>
+
+    <div class="links">
+        <a href="#">Spotify</a>
+        <a href="#">Apple Music</a>
+        <a href="#">YouTube Music</a>
+        <a href="#">Amazon Music</a>
+    </div>
+</div>
 
 </body>
 </html>
