--- a/tour.html
+++ b/tour.html
@@ -2,63 +2,98 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rock-O-Bots | 2026 World Tour</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock-O-Bots • Tour</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
             font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(180deg, #ff8a3d, #ff5ca7);
-            background-attachment: fixed;
-            text-align: center;
             color: white;
+            background: linear-gradient(to bottom, #ff9933, #ff66b3);
+            text-align: center;
         }
-        header {
-            padding: 60px 0 20px;
-            font-size: 3rem;
-            font-weight: 800;
-            text-shadow: 0 0 15px rgba(0,0,0,0.4);
+        nav {
+            padding: 25px;
+            font-size: 20px;
         }
         nav a {
             color: white;
-            margin: 0 20px;
+            margin: 0 18px;
             text-decoration: none;
-            font-size: 1.2rem;
-            font-weight: 600;
+            font-weight: 700;
         }
-        nav a:hover { text-shadow: 0 0 8px rgba(255,255,255,0.8); }
-        .section { padding: 80px 20px; }
-        ul { list-style: none; padding: 0; font-size: 1.3rem; }
-        li { margin: 10px 0; }
+        h1 {
+            font-size: 48px;
+            margin-top: 50px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            max-width: 600px;
+            margin: 40px auto;
+            font-size: 22px;
+            line-height: 1.9;
+        }
     </style>
 </head>
 <body>
 
-<header>Rock-O-Bots</header>
-
 <nav>
     <a href="index.html">Home</a>
-    <a href="stream.html">Stream Album</a>
-    <a href="tour.html">2026 World Tour</a>
+    <a href="stream.html">Stream</a>
+    <a href="tour.html">Tour</a>
 </nav>
 
-<section class="section" id="tour">
-    <h2>2026 World Tour</h2>
-    <ul>
-        <li>Tokyo, Japan — Jan 12</li>
-        <li>Seoul, South Korea — Jan 18</li>
-        <li>Sydney, Australia — Feb 2</li>
-        <li>Los Angeles, CA — Mar 10</li>
-        <li>Chicago, IL — Mar 17</li>
-        <li>Boston, MA — Mar 22</li>
-        <li>Toronto, Canada — Apr 4</li>
-        <li>Berlin, Germany — Apr 18</li>
-        <li>Paris, France — Apr 24</li>
-        <li>London, UK — May 1</li>
-        <li>São Paulo, Brazil — Jun 10</li>
-        <li>Mexico City, Mexico — Jun 17</li>
-    </ul>
-</section>
+<h1>2026 World Tour</h1>
+
+<ul>
+    <li>Seoul, South Korea</li>
+    <li>Tokyo, Japan</li>
+    <li>Kyoto, Japan</li>
+    <li>Osaka, Japan</li>
+    <li>Beijing, China</li>
+    <li>Shanghai, China</li>
+    <li>Bangkok, Thailand</li>
+    <li>Taipei, Taiwan</li>
+    <li>Singapore</li>
+    <li>Manila, Philippines</li>
+    <li>Jakarta, Indonesia</li>
+    <li>Sydney, Australia</li>
+    <li>Melbourne, Australia</li>
+    <li>Auckland, New Zealand</li>
+    <li>Honolulu, Hawaii</li>
+    <li>Los Angeles, California</li>
+    <li>San Francisco, California</li>
+    <li>Seattle, Washington</li>
+    <li>Denver, Colorado</li>
+    <li>Dallas, Texas</li>
+    <li>Houston, Texas</li>
+    <li>Chicago, Illinois</li>
+    <li>Detroit, Michigan</li>
+    <li>Atlanta, Georgia</li>
+    <li>Miami, Florida</li>
+    <li>Orlando, Florida</li>
+    <li>Nashville, Tennessee</li>
+    <li>New Orleans, Louisiana</li>
+    <li>Phoenix, Arizona</li>
+    <li>Boston, Massachusetts</li>
+    <li>New York City, New York</li>
+    <li>Philadelphia, Pennsylvania</li>
+    <li>Toronto, Canada</li>
+    <li>Vancouver, Canada</li>
+    <li>Montreal, Canada</li>
+    <li>Mexico City, Mexico</li>
+    <li>London, England</li>
+    <li>Paris, France</li>
+    <li>Berlin, Germany</li>
+    <li>Rome, Italy</li>
+    <li>Barcelona, Spain</li>
+    <li>Amsterdam, Netherlands</li>
+    <li>Stockholm, Sweden</li>
+    <li>Dublin, Ireland</li>
+    <li>Cape Town, South Africa</li>
+</ul>
 
 </body>
 </html>
